Introduced s3 config download and handler for aws lambda